--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true
-    }
+    },
+    "include": [
+        "process-env.d.ts"
+    ]
 }
